--- a/app/src/main/res/layout/fragment_dialer.xml
+++ b/app/src/main/res/layout/fragment_dialer.xml
@@ -170,7 +170,7 @@
                     android:onClick="@{newConferenceClickListener}"
                     android:padding="8dp"
                     android:src="@drawable/icon_video_conf_new"
-                    android:visibility="@{viewModel.scheduleConferenceAvailable ? View.VISIBLE : View.GONE}"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnAudio"
                     app:layout_constraintStart_toStartOf="parent"
@@ -187,7 +187,7 @@
                     android:onClick="@{() -> viewModel.startCall()}"
                     android:padding="12dp"
                     android:src="@drawable/call_audio_start"
-                    android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{viewModel.atLeastOneCall ? View.VISIBLE : View.VISIBLE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnVideo"
                     app:layout_constraintStart_toEndOf="@id/btnConference"
@@ -204,7 +204,7 @@
                     android:onClick="@{() -> viewModel.startVideoCall()}"
                     android:padding="12dp"
                     android:src="@drawable/call_video_start"
-                    android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{viewModel.atLeastOneCall ? View.VISIBLE : View.VISIBLE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnAddCall"
                     app:layout_constraintStart_toEndOf="@id/btnAudio"
@@ -219,7 +219,7 @@
                     android:onClick="@{() -> viewModel.startCall()}"
                     android:padding="12dp"
                     android:src="@drawable/call_add"
-                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; !viewModel.transferVisibility ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; !viewModel.transferVisibility ? View.GONE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnTransfer"
                     app:layout_constraintStart_toEndOf="@id/btnVideo"
@@ -234,7 +234,7 @@
                     android:onClick="@{transferCallClickListener}"
                     android:padding="12dp"
                     android:src="@drawable/call_transfer"
-                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; viewModel.transferVisibility ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; viewModel.transferVisibility ? View.GONE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/btnAddCall"
