--- a/app/src/main/res/drawable/bg_gradient_toolbar.xml
+++ b/app/src/main/res/drawable/bg_gradient_toolbar.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<!-- res/drawable/bg_gradient_toolbar.xml -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="@color/primary_color"
+            android:endColor="@color/grey_color"
+        android:angle="270"
+        />
+</shape>
