--- a/app/src/main/res/layout/fragment_incoming_call_voip.xml
+++ b/app/src/main/res/layout/fragment_incoming_call_voip.xml
@@ -156,7 +156,7 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:text="@{callsViewModel.currentCallData.displayableAddress, default=`sip:bilbo.baggins@sip.linphone.org`}"
+            android:text="@{callsViewModel.currentCallData.displayableAddress, default=`sip:naminfo@192.168.1.50`}"
             app:layout_constraintBottom_toTopOf="@id/buttons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
