--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:linphone="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:linphone="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="android.view.View" />
-
-        <import type="android.text.InputType" />
-
         <variable
             name="viewModel"
             type="com.naminfo.cdot_vc.activities.main.settings.viewmodels.SettingsViewModel" />
     </data>
 
     <androidx.slidingpanelayout.widget.SlidingPaneLayout
+
         android:id="@+id/sliding_pane"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.naminfo.cdot_vc.activities.main.MainActivity">
+        tools:context=".activities.main.MainActivity">
 
+        <!-- LEFT PANEL (Settings with CardView) -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="@dimen/master_fragment_width"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
             android:background="?attr/backgroundColor">
 
             <!-- Top Toolbar -->
@@ -66,11 +63,15 @@
                     android:visibility="invisible" />
             </LinearLayout>
 
-            <!-- Scrollable Content -->
+
+
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/settings_scroll_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:padding="12dp"
+                android:layout_marginTop="60dp"
                 app:layout_constraintTop_toBottomOf="@id/top_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,16 +81,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp">
+                    android:showDividers="middle">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="@{viewModel.showAccountSettings ? View.VISIBLE : View.GONE}"
-                        linphone:entries="@{viewModel.accounts}"
-                        linphone:layout="@{@layout/settings_account_cell}"/>
+                        android:visibility="@{viewModel.showAccountSettings ? View.GONE : View.GONE}"
+                        linphone:itemsh="@{viewModel.accounts}"
+                        linphone:layout="@{@layout/settings_account_cell}" />
 
                     <TextView
                         style="@style/settings_category_font"
@@ -98,50 +98,68 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
                         android:paddingTop="15dp"
-                        android:text="@string/settings_list_title" />
+                        android:text="@string/settings_list_title"
+                        android:textColor="@color/primary_color" />
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showTunnelSettings ? View.VISIBLE : View.GONE}"
-                        linphone:listener="@{viewModel.tunnelSettingsListener}"
-                        linphone:title="@{@string/settings_tunnel_title}" />
+                    <GridLayout
+                        android:id="@+id/settings_grid"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:columnCount="2"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal"
+                        android:alignmentMode="alignMargins"
+                        android:columnOrderPreserved="false"
+                        android:rowCount="2"
+                        android:useDefaultMargins="true"
+                        >
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showAudioSettings ? View.VISIBLE : View.GONE}"
-                        linphone:icon="@{@drawable/settings_audio}"
-                        linphone:listener="@{viewModel.audioSettingsListener}"
-                        linphone:title="@{@string/settings_audio_title}" />
+                        <!-- Settings Includes -->
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showVideoSettings ? View.VISIBLE : View.GONE}"
-                        linphone:icon="@{@drawable/settings_video}"
-                        linphone:listener="@{viewModel.videoSettingsListener}"
-                        linphone:title="@{@string/settings_video_title}" />
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showAudioSettings ? View.VISIBLE : View.GONE}"
+                            linphone:icon="@{@drawable/settings_audio}"
+                            linphone:listener="@{viewModel.audioSettingsListener}"
+                            linphone:title="@{@string/settings_audio_title}" />
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showCallSettings ? View.VISIBLE : View.GONE}"
-                        linphone:icon="@{@drawable/settings_call}"
-                        linphone:listener="@{viewModel.callSettingsListener}"
-                        linphone:title="@{@string/settings_call_title}" />
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showVideoSettings ? View.VISIBLE : View.GONE}"
+                            linphone:icon="@{@drawable/settings_video}"
+                            linphone:listener="@{viewModel.videoSettingsListener}"
+                            linphone:title="@{@string/settings_video_title}" />
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showNetworkSettings ? View.VISIBLE : View.GONE}"
-                        linphone:icon="@{@drawable/settings_network}"
-                        linphone:listener="@{viewModel.networkSettingsListener}"
-                        linphone:title="@{@string/settings_network_title}" />
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showCallSettings ? View.VISIBLE : View.GONE}"
+                            linphone:icon="@{@drawable/settings_call}"
+                            linphone:listener="@{viewModel.callSettingsListener}"
+                            linphone:title="@{@string/settings_call_title}" />
 
-                    <include
-                        layout="@layout/settings_widget_basic"
-                        android:visibility="@{viewModel.showAdvancedSettings ? View.VISIBLE : View.GONE}"
-                        linphone:icon="@{@drawable/settings_advanced}"
-                        linphone:listener="@{viewModel.advancedSettingsListener}"
-                        linphone:title="@{@string/settings_advanced_title}" />
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showNetworkSettings ? View.VISIBLE : View.GONE}"
+                            linphone:icon="@{@drawable/settings_network}"
+                            linphone:listener="@{viewModel.networkSettingsListener}"
+                            linphone:title="@{@string/settings_network_title}" />
+
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showAdvancedSettings ? View.VISIBLE : View.GONE}"
+                            linphone:icon="@{@drawable/settings_advanced}"
+                            linphone:listener="@{viewModel.advancedSettingsListener}"
+                            linphone:title="@{@string/settings_advanced_title}" />
+                        <include
+                            layout="@layout/settings_widget_basic"
+                            android:visibility="@{viewModel.showTunnelSettings ? View.VISIBLE : View.GONE}"
+                            linphone:listener="@{viewModel.tunnelSettingsListener}"
+                            linphone:title="@{@string/settings_tunnel_title}" />
+                    </GridLayout>
+
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
+
 
             <!-- Right Divider -->
             <View
@@ -151,20 +169,19 @@
                 android:background="?attr/dividerColor"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <!-- RIGHT PANEL -->
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/settings_nav_container"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="300dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            linphone:defaultNavHost="false"
-            linphone:navGraph="@navigation/settings_nav_graph" />
-
+            app:defaultNavHost="false"
+            app:navGraph="@navigation/settings_nav_graph" />
     </androidx.slidingpanelayout.widget.SlidingPaneLayout>
+
 
 </layout>
