--- a/app/src/main/res/layout/settings_account_cell.xml
+++ b/app/src/main/res/layout/settings_account_cell.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View" />
@@ -8,56 +12,83 @@
             type="com.naminfo.cdot_vc.activities.main.settings.viewmodels.AccountSettingsViewModel" />
     </data>
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
+
         android:onClick="@{() -> data.accountsSettingsListener.onAccountClicked(data.identity)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical|left">
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginVertical="4dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <ImageView
-            android:id="@+id/led"
-            android:background="@drawable/led_background"
-            android:padding="@dimen/contact_presence_badge_padding"
-            android:src="@{data.iconResource, default=@drawable/led_not_registered}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
-
-        <com.naminfo.cdot_vc.views.MarqueeTextView
-            android:id="@+id/settings_title"
-            android:text="@{data.displayUsernameInsteadOfIdentity ? data.userName : data.identity}"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:layout_toLeftOf="@id/led"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            style="@style/settings_item_font"/>
+            android:paddingVertical="12dp"
+            android:paddingHorizontal="10dp">
 
-        <com.naminfo.cdot_vc.views.MarqueeTextView
-            android:id="@+id/settings_subtitle"
-            android:visibility="@{data.isDefault() ? View.VISIBLE : View.GONE}"
-            android:text="@string/settings_default_account_subtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:layout_below="@id/settings_title"
-            android:layout_toLeftOf="@id/led"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            style="@style/settings_item_subtitle_font"/>
+            <!-- Status LED -->
+            <ImageView
+                android:id="@+id/led"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/led_background"
+                android:padding="@dimen/contact_presence_badge_padding"
+                android:src="@{data.iconResource, default=@drawable/led_not_registered}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp" />
 
-        <View
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/settings_subtitle"
-            android:background="?attr/dividerColor" />
+            <!-- Title -->
+            <com.naminfo.cdot_vc.views.MarqueeTextView
+                android:id="@+id/settings_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:text="@{data.displayUsernameInsteadOfIdentity ? data.displayName : data.identity}"
+                style="@style/settings_item_font"
+                android:textColor="@color/black_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/led"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="4dp" />
 
-    </RelativeLayout>
+            <!-- Subtitle -->
+            <com.naminfo.cdot_vc.views.MarqueeTextView
+                android:id="@+id/settings_subtitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:visibility="@{data.isDefault() ? View.VISIBLE : View.VISIBLE}"
+                android:text="@string/settings_default_account_subtitle"
+                android:textColor="@color/black_color"
+                style="@style/settings_item_subtitle_font"
+                app:layout_constraintStart_toStartOf="@id/settings_title"
+                app:layout_constraintEnd_toEndOf="@id/settings_title"
+                app:layout_constraintTop_toBottomOf="@id/settings_title"
+                android:layout_marginTop="2dp" />
+
+            <!-- Divider -->
+            <View
+                android:id="@+id/divider"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="?attr/dividerColor"
+                app:layout_constraintTop_toBottomOf="@id/settings_subtitle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 
 </layout>
