--- a/app/src/main/res/layout/settings_widget_basic.xml
+++ b/app/src/main/res/layout/settings_widget_basic.xml
@@ -1,89 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="title"
             type="String" />
+
         <variable
             name="subtitle"
             type="String" />
+
         <variable
             name="enabled"
             type="Boolean" />
+
         <variable
             name="icon"
             type="android.graphics.drawable.Drawable" />
+        <variable name="backgroundColor" type="String" />
         <variable
             name="listener"
             type="com.naminfo.cdot_vc.activities.main.settings.SettingListener" />
     </data>
 
-    <RelativeLayout
-        android:onClick="@{() -> listener.onClicked()}"
-        android:enabled="@{enabled ?? true}"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="85dp"
+        android:layout_columnWeight="1"
+        android:layout_marginHorizontal="16dp"
+        app:customCardBackground="@{backgroundColor}"
+        android:enabled="@{enabled ?? true}"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="@{() -> listener.onClicked()}"
 
-        <ImageView
-            android:id="@+id/iconView"
-            android:layout_width="wrap_content"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="3dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="2dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:layout_marginLeft="@dimen/settings_margin"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:contentDescription="@null"
-            android:visibility="@{icon != null ? View.VISIBLE : View.GONE}"
-            android:src="@{icon}" />
+            android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/settings_title"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:gravity="center_vertical"
-            android:text="@{title}"
-            android:enabled="@{enabled ?? true}"
-            android:visibility="@{title.length() > 0 ? View.VISIBLE : View.GONE}"
-            android:maxLines="2"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="@dimen/settings_margin"
-            android:layout_marginRight="@dimen/settings_margin"
-            android:layout_toRightOf="@id/iconView"
-            style="@style/settings_item_font"
-            app:autoSizeTextType="uniform"
-            app:autoSizeMinTextSize="@dimen/setting_title_min_size"
-            app:autoSizeMaxTextSize="@dimen/setting_title_max_size"
-            app:autoSizeStepGranularity="@dimen/settings_granularity_step"/>
+            <!-- Icon -->
+            <ImageView
+                android:id="@+id/iconView"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="8dp"
+                android:contentDescription="@null"
+                android:padding="8dp"
+                android:src="@{icon}"
+                android:visibility="@{icon != null ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black_color" />
 
-        <TextView
-            android:id="@+id/settings_subtitle"
-            android:text="@{subtitle}"
-            android:enabled="@{enabled ?? true}"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:gravity="center_vertical"
-            android:visibility="@{subtitle.length() > 0 ? View.VISIBLE : View.GONE}"
-            android:maxLines="1"
-            android:layout_below="@id/settings_title"
-            android:layout_marginLeft="@dimen/settings_margin"
-            android:layout_marginRight="@dimen/settings_margin"
-            android:layout_toRightOf="@id/iconView"
-            style="@style/settings_item_subtitle_font"
-            app:autoSizeTextType="uniform"
-            app:autoSizeMinTextSize="@dimen/setting_subtitle_min_size"
-            app:autoSizeMaxTextSize="@dimen/setting_subtitle_max_size"
-            app:autoSizeStepGranularity="@dimen/settings_granularity_step"/>
+            <!-- Title -->
+            <TextView
+                android:id="@+id/settings_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="@{title}"
+                android:textAppearance="?attr/textAppearanceTitleMedium"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black_color"
+                app:layout_constraintBottom_toBottomOf="@id/iconView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintStart_toEndOf="@id/iconView"
+                app:layout_constraintTop_toTopOf="@id/iconView"
+                app:layout_constraintVertical_bias="0.5" />
 
-        <View
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/settings_subtitle"
-            android:background="?attr/dividerColor" />
-
-    </RelativeLayout>
-
+            <!-- Subtitle -->
+            <TextView
+                android:id="@+id/settings_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="@{subtitle}"
+                android:textAppearance="?attr/textAppearanceBodySmall"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/settings_title"
+                app:layout_constraintStart_toStartOf="@+id/settings_title"
+                app:layout_constraintTop_toBottomOf="@id/settings_title" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
