--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,11 @@
 
     <!-- Base application theme. -->
     <style name="BaseAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorSurface">@color/white_color</item>
+        <item name="colorOnSurface">@color/black_color</item>
+        <item name="colorOutline">@color/grey_color</item>
         <!-- Disable animations between activities -->
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowBackground">@color/transparent_color</item>
