--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
     <!-- Base application theme. -->
     <style name="BaseAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
+        <item name="colorSecondary">@color/grey_color</item>
+        <item name="colorOnSecondary">@color/black_color</item>
         <item name="colorOnPrimary">@android:color/white</item>
         <item name="colorSurface">@color/white_color</item>
         <item name="colorOnSurface">@color/black_color</item>
