--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -112,6 +112,7 @@
 
                 <include
                     android:id="@+id/delete"
+                    android:layout_marginTop="20dp"
                     layout="@layout/settings_widget_basic"
                     app:backgroundColor="@{viewModel.audioCardColor}"
                     linphone:icon="@{@drawable/delete_account}"
