--- a/app/src/main/res/layout/fragment_audio_settings.xml
+++ b/app/src/main/res/layout/fragment_audio_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:linphone="http://schemas.android.com/apk/res-auto">
+    xmlns:linphone="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
         <import type="android.view.View"/>
@@ -149,8 +150,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
-                    <!--linphone:entries="@{viewModel.audioCodecs}"/>-->
+                    android:orientation="vertical"
+                    linphone:entries="@{viewModel.audioCodecs}"
+                />
 
             </LinearLayout>
 
