--- a/app/src/main/res/layout/fragment_video_settings.xml
+++ b/app/src/main/res/layout/fragment_video_settings.xml
@@ -151,7 +151,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical"
+                    linphone:entries="@{viewModel.videoCodecs}"/>
                     <!--linphone:entries="@{viewModel.videoCodecs}"-->
 
             </LinearLayout>
