--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -59,6 +59,8 @@
         <attr name="checked" format="boolean" />
         <attr name="value" format="string" />
         <attr name="image" format="reference" />
+        <attr name="titleTextColor" format="color" />
+        <attr name="titleTextSize" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="VoiceRecordProgressBar">
