--- a/app/src/main/res/layout/dialer_fragment.xml
+++ b/app/src/main/res/layout/dialer_fragment.xml
@@ -140,7 +140,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp">
 
-            <ImageView
+        <!--    <ImageView
                 android:onClick="@{newConferenceClickListener}"
                 android:visibility="@{viewModel.scheduleConferenceAvailable ? View.VISIBLE : View.GONE}"
                 android:contentDescription="@string/content_description_create_conference"
@@ -149,7 +149,7 @@
                 android:layout_weight="2"
                 android:background="?attr/button_background_drawable"
                 android:padding="5dp"
-                android:src="@drawable/icon_video_conf_new" />
+                android:src="@drawable/icon_video_conf_new" />-->
 
             <!--<ImageView
                 android:onClick="@{newContactClickListener}"
