--- a/app/src/main/res/layout/history_list_cell.xml
+++ b/app/src/main/res/layout/history_list_cell.xml
@@ -6,7 +6,8 @@
     <data>
 
         <import type="android.view.View" />
-        <import type="org.linphone.core.ConsolidatedPresence"/>
+
+        <import type="org.linphone.core.ConsolidatedPresence" />
 
         <variable
             name="clickListener"
@@ -36,8 +37,10 @@
             name="groupCount"
             type="Integer" />
     </data>
-
+<!-- android:onClick="@{detailsClickListener}"
+        android:onLongClick="@{longClickListener}"-->
     <RelativeLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="?attr/backgroundColor"
@@ -51,20 +54,22 @@
             android:id="@+id/right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
+            android:layout_alignParentEnd="true"
+            android:visibility="visible"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:orientation="horizontal">
-           <!-- app:callTypeTextColor="@{viewModel.callType.toString()}"-->
-<TextView
-    android:layout_width="50dp"
-    android:layout_height="40dp"
-    android:adjustViewBounds="true"
-    android:gravity="center"
-    android:textStyle="bold"
-    android:textSize="14sp"
-   android:textColor="@color/primary_dark_color"
-    android:text="@{viewModel.callType.first.toString()}"/>
+            <!-- app:callTypeTextColor="@{viewModel.callType.toString()}"-->
+        <!--    <TextView
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:adjustViewBounds="true"
+                android:gravity="center"
+                android:text="@{viewModel.callType.first.toString()}"
+                android:textColor="@color/primary_dark_color"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -73,9 +78,10 @@
                 android:contentDescription="@string/content_description_show_call_details"
                 android:enabled="@{!selectionListViewModel.isEditionEnabled}"
                 android:onClick="@{detailsClickListener}"
-                android:src="@drawable/list_detail" />
+                android:src="@drawable/list_detail" />-->
 
             <CheckBox
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:checked="@{selectionListViewModel.selectedItems.contains(position)}"
@@ -92,17 +98,17 @@
             android:layout_marginLeft="10dp"
             android:layout_toLeftOf="@id/right"
             android:gravity="center_vertical">
-<!--coilContact="@{viewModel}"-->
+            <!--coilContact="@{viewModel}"-->
             <ImageView
                 android:id="@+id/avatar"
-                app:loadProfileInitials="@{viewModel.displayName}"
                 android:layout_width="@dimen/contact_avatar_size"
                 android:layout_height="@dimen/contact_avatar_size"
                 android:layout_alignParentLeft="true"
                 android:layout_marginRight="10dp"
-                android:contentDescription="@null"
                 android:background="@drawable/generated_avatar_bg"
-                android:src="@drawable/voip_single_contact_avatar" />
+                android:contentDescription="@null"
+                android:src="@drawable/voip_single_contact_avatar"
+                app:loadProfileInitials="@{viewModel.displayName}" />
 
             <ImageView
                 android:layout_width="@dimen/contact_presence_badge_size"
@@ -112,8 +118,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/led_background"
                 android:padding="@dimen/contact_presence_badge_padding"
-                app:presenceIcon="@{viewModel.presenceStatus}"
                 android:visibility="@{viewModel.presenceStatus == ConsolidatedPresence.Offline ? View.GONE : View.VISIBLE, default=gone}"
+                app:presenceIcon="@{viewModel.presenceStatus}"
                 tools:ignore="ContentDescription" />
 
             <ImageView
@@ -137,7 +143,7 @@
                 android:layout_toRightOf="@id/icon"
                 android:gravity="center_vertical"
                 android:singleLine="true"
-                android:text="@{(viewModel.isConferenceCallLog ? viewModel.conferenceSubject : viewModel.contact.name ?? viewModel.displayName) + (groupCount > 1 ? ` (` + groupCount + `)` : ``), default=`Frodo Baggins (6)`}" />
+                android:text="@{(viewModel.isConferenceCallLog ? viewModel.conferenceSubject :  viewModel.displayName ?? viewModel.contactNumber ) + (groupCount > 1 ? ` (` + groupCount + `)` : ``), default=`Frodo Baggins (6)`}" />
 
         </RelativeLayout>
 
