--- a/app/src/main/res/layout/history_master_fragment.xml
+++ b/app/src/main/res/layout/history_master_fragment.xml
@@ -30,6 +30,7 @@
                 android:id="@+id/top_bar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_activity_top_bar_size"
+                android:visibility="visible"
                 android:background="?attr/lightToolbarBackgroundColor"
                 android:orientation="horizontal">
 
