--- a/app/src/main/res/layout/assistant_phone_account_creation_fragment.xml
+++ b/app/src/main/res/layout/assistant_phone_account_creation_fragment.xml
@@ -22,7 +22,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/top_bar_fragment"
-            android:name="org.linphone.activities.assistant.fragments.TopBarFragment"
+            android:name="org.naminfo.activities.assistant.fragments.TopBarFragment"
             android:layout_width="match_parent"
             android:layout_height="@dimen/main_activity_top_bar_size"
             android:layout_alignParentTop="true"
