--- a/app/src/main/res/layout/chat_room_master_fragment.xml
+++ b/app/src/main/res/layout/chat_room_master_fragment.xml
@@ -138,7 +138,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/list_edit_top_bar_fragment"
-            android:name="org.linphone.activities.main.fragments.ListTopBarFragment"
+            android:name="org.naminfo.activities.main.fragments.ListTopBarFragment"
             android:layout_width="match_parent"
             android:layout_height="@dimen/main_activity_top_bar_size"
             android:layout_alignTop="@id/top_bar"
