--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.32</domain>
         <domain includeSubdomains="true">192.168.1.9</domain>
+        <domain includeSubdomains="true">192.168.1.50</domain>
     </domain-config>
     <base-config cleartextTrafficPermitted="true" />
 </network-security-config>
